--- a/src/styles/bulma/utilities/mixins.sass
+++ b/src/styles/bulma/utilities/mixins.sass
@@ -1,18 +1,11 @@
 @import "initial-variables"
+@import "derived-variables.sass"
 
 =clearfix
   &::after
     clear: both
     content: " "
     display: table
-
-=ellipsis($width: 100%, $display: inline-block)
-  display: $display
-  max-width: $width
-  overflow: hidden
-  text-overflow: ellipsis
-  white-space: nowrap
-  word-wrap: normal
 
 =center($width, $height: 0)
   position: absolute
